client logos update

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Bridge Professional Development Centre is your first choice for soft skills and language training in Addis Ababa. The development Centre is located in Gurd Shola, Addis Ababa Ethiopia. We provide training at
   any location our customers request and also provide online classes." />
   <meta name="keywords"
-    content="Bridge Proffesional Development Centre, Bridge Development Centre, Soft skill training, Professional Development Centre in Addis Ababa, Professional Development Centre in Ethiopia, Communication training, bridge, bridgepdc, bridgepdc.com, Training, Soft Skills, Business English, Learning and development, Communication training, Customer Service Training, Public speaking training, Intercultural training, Amharic for expats, Leadership training, Coaching, Mentoring, Team building training, Awaydays" />
+    content="Bridge Professional Development Centre, Bridge Development Centre, Soft skill training, Professional Development Centre in Addis Ababa, Professional Development Centre in Ethiopia, Communication training, bridge, bridgepdc, bridgepdc.com, Training, Soft Skills, Business English, Learning and development, Communication training, Customer Service Training, Public speaking training, Intercultural training, Amharic for expats, Leadership training, Coaching, Mentoring, Team building training, Awaydays" />
   <meta name="author" content="Beka Haile" />
 
   <title>Bridge Professional Development Centre</title>
@@ -902,107 +902,83 @@
     <div id="clients" class="section-bg">
       <div class="container">
         <div class="section-header text-center">
-          <h3>Our CLients</h3>
+          <h3>Our Clients</h3>
           <p>Meet our happy clients</p>
         </div>
         <div class="client_carousel">
           <div class="client_carousel_slider">
             <ul class="client_list">
               <li>
-                <img src="img/clients/Excellerent.png" class="img-fluid client_item_lg" />
-              </li>
-              <li>
-                <img src="img/clients/Compassion.png" class="img-fluid client_item" />
-              </li>
-              <li>
-                <img src="img/clients/Fawe.png" class="img-fluid client_item_lg" />
-              </li>
-              <li>
-                <img src="img/clients/nexgens.png" class="img-fluid client_item" />
-              </li>
-              <li>
-                <img src="img/clients/Dejen.png" class="img-fluid client_item" />
-              </li>
-              <li>
-                <img src="img/clients/sandford.jpg" class="img-fluid client_item_lg" />
-              </li>
-              <li>
-                <img src="img/clients/plan international.png" class="img-fluid client_item" />
-              </li>
-              <li>
-                <img src="img/clients/world vision.png" class="img-fluid client_item" />
-              </li>
-              <li>
-                <img src="img/clients/cambridge.png" class="img-fluid client_item_lg" />
-              </li>
-              <li>
-                <img src="img/clients/GPE.png" class="img-fluid client_item" />
-              </li>
-              <li>
-                <img src="img/clients/save the children.png" class="img-fluid client_item" />
-              </li>
-              <li>
-                <img src="img/clients/Capital Hotel.png" class="img-fluid client_item" />
-              </li>
-              <li>
-                <img src="img/clients/Gallani Coffee.png" class="img-fluid client_item" />
+                <img src="img/clients/Who.png" class="img-fluid client_item" />
               </li>
               <li>
                 <img src="img/clients/us embassy.jpg" class="img-fluid client_item" />
               </li>
               <li>
-                <img src="img/clients/lersha.png" class="img-fluid client_item" />
-              </li>
-              <li>
-                <img src="img/clients/acme-engineering.jpg" class="img-fluid client_item" />
-              </li>
-              <li>
-                <img src="img/clients/hilltops.png" class="img-fluid client_item" />
+                <img src="img/clients/giz.png" class="img-fluid client_item_lg" />
               </li>
               <li>
                 <img src="img/clients/amcham.png" class="img-fluid client_item" />
               </li>
               <li>
-                <img src="img/clients/giz.png" class="img-fluid client_item_lg" />
+                <img src="img/clients/save the children.png" class="img-fluid client_item" />
               </li>
               <li>
-                <img src="img/clients/espbc.png" class="img-fluid client_item_lg" />
+                <img src="img/clients/plan international.png" class="img-fluid client_item" />
+              </li>
+              <li>
+                <img src="img/clients/Fawe.png" class="img-fluid client_item_lg" />
+              </li>
+              <li>
+                <img src="img/clients/world vision.png" class="img-fluid client_item" />
+              </li>
+              <li>
+                <img src="img/clients/Compassion.png" class="img-fluid client_item" />
               </li>
               <li>
                 <img src="img/clients/bethany-christian-services.jpg" class="img-fluid client_item_lg" />
               </li>
               <li>
-                <img src="img/clients/moenco.png" class="img-fluid client_item_lg" />
+                <img src="img/clients/nexgens.png" class="img-fluid client_item" />
               </li>
               <li>
-                <img src="img/clients/dca.png" class="img-fluid client_item" />
+                <img src="img/clients/Excellerent.png" class="img-fluid client_item_lg" />
               </li>
               <li>
-                <img src="img/clients/marriott-hotel.png" class="img-fluid client_item" />
+                <img src="img/clients/lersha.png" class="img-fluid client_item" />
               </li>
               <li>
-                <img src="img/clients/ECOM.png" class="img-fluid client_item" />
+                <img src="img/clients/Dejen.png" class="img-fluid client_item" />
+              </li>
+              <li>
+                <img src="img/clients/Gallani Coffee.png" class="img-fluid client_item" />
               </li>
               <li>
                 <img src="img/clients/Haile_Resorts.png" class="img-fluid client_item" />
               </li>
               <li>
-                <img src="img/clients/berhan-insurance.png" class="img-fluid client_item" />
+                <img src="img/clients/Capital Hotel.png" class="img-fluid client_item" />
               </li>
               <li>
-                <img src="img/clients/don bosco.jpg" class="img-fluid client_item" />
-              </li>
-              <li>
-                <img src="img/clients/IEC.jpg" class="img-fluid client_item" />
-              </li>
-              <li>
-                <img src="img/clients/rovestone.png" class="img-fluid client_item" />
+                <img src="img/clients/marriott-hotel.png" class="img-fluid client_item" />
               </li>
               <li>
                 <img src="img/clients/century-real-estate.png" class="img-fluid client_item" />
               </li>
               <li>
-                <img src="img/clients/wabe-shebelle-hotel.png" class="img-fluid client_item" />
+                <img src="img/clients/berhan-insurance.png" class="img-fluid client_item" />
+              </li>
+              <li>
+                <img src="img/clients/espbc.png" class="img-fluid client_item_lg" />
+              </li>
+              <li>
+                <img src="img/clients/moenco.png" class="img-fluid client_item_lg" />
+              </li>
+              <li>
+                <img src="img/clients/sandford.jpg" class="img-fluid client_item_lg" />
+              </li>
+              <li>
+                <img src="img/clients/cambridge.png" class="img-fluid client_item_lg" />
               </li>
             </ul>
           </div>
