--- a/index.html
+++ b/index.html
@@ -431,13 +431,13 @@
           Our Public Courses Schedule
         </h4>
         <span class="fa-stack fa-4x">
-          <a href="flyer/Public course schedule till June 2023.pdf">
-            <img class="img-fluid" src="flyer/Public courses from June to August 2022.jpg" alt="Brochure" />
+          <a href="flyer/Public course schedule untill June 2023.pdf">
+            <img class="img-fluid" src="flyer/Public courses from March to June 2023.png" alt="Brochure" />
           </a>
         </span>
         <p class="text-muted" style="margin-top: 30px;">
           <!-- Coming soon -->
-          <a href="flyer/Public course schedule till June 2023.pdf">
+          <a href="flyer/Public course schedule untill June 2023.pdf">
             Click here </a>for our Our Public Courses Schedule
         </p>
         <!-- <h4 class="service-heading">Special Programs for Exam Preparation</h4>
