added getfam to clients

--- a/index.html
+++ b/index.html
@@ -957,7 +957,10 @@
                 <img src="img/clients/Haile_Resorts.png" class="img-fluid client_item" />
               </li>
               <li>
-                <img src="img/clients/Capital Hotel.png" class="img-fluid client_item" />
+                <img src="img/clients/getfam.jpg" class="img-fluid client_item" />
+              </li>
+              <li>
+                <img src="img/clients/capital hotel.png" class="img-fluid client_item" />
               </li>
               <li>
                 <img src="img/clients/marriott-hotel.png" class="img-fluid client_item" />
