--- a/index.html
+++ b/index.html
@@ -960,7 +960,7 @@
                 <img src="img/clients/getfam.jpg" class="img-fluid client_item" />
               </li>
               <li>
-                <img src="img/clients/capital hotel.png" class="img-fluid client_item" />
+                <img src="img/clients/capital-hotel.png" class="img-fluid client_item" />
               </li>
               <li>
                 <img src="img/clients/marriott-hotel.png" class="img-fluid client_item" />
