added eeig to clients

--- a/index.html
+++ b/index.html
@@ -978,6 +978,9 @@
                 <img src="img/clients/moenco.png" class="img-fluid client_item_lg" />
               </li>
               <li>
+                <img src="img/clients/eeig.png" />
+              </li>
+              <li>
                 <img src="img/clients/sandford.jpg" class="img-fluid client_item_lg" />
               </li>
               <li>
