logo scale edit

--- a/index.html
+++ b/index.html
@@ -978,7 +978,7 @@
                 <img src="img/clients/moenco.png" class="img-fluid client_item_lg" />
               </li>
               <li>
-                <img src="img/clients/eeig.png" />
+                <img src="img/clients/eeig.png" class="img-fluid client_item" />
               </li>
               <li>
                 <img src="img/clients/sandford.jpg" class="img-fluid client_item_lg" />
