--- a/index.html
+++ b/index.html
@@ -1394,6 +1394,11 @@
                   <i class="fab fa-linkedin"></i>
                 </a>
               </li>
+              <li class="list-inline-item">
+                <a href="https://www.youtube.com/@Bridgepdc/" target="_blank">
+                  <i class="fab fa-youtube"></i>
+                </a>
+              </li>
             </ul>
           </div>
           <div class="col-md-4">
