updated client list

--- a/index.html
+++ b/index.html
@@ -909,6 +909,9 @@
           <div class="client_carousel_slider">
             <ul class="client_list">
               <li>
+                <img src="img/clients/mastercard foundation.png" class="img-fluid client_item_lg" />
+              </li>
+              <li>
                 <img src="img/clients/Who.png" class="img-fluid client_item" />
               </li>
               <li>
@@ -985,6 +988,9 @@
               </li>
               <li>
                 <img src="img/clients/cambridge.png" class="img-fluid client_item_lg" />
+              </li>
+              <li>
+                <img src="img/clients/five star.jpg" class="img-fluid client_item" />
               </li>
             </ul>
           </div>
