updated course list

--- a/index.html
+++ b/index.html
@@ -459,12 +459,12 @@
           List of courses
         </h4>
         <span class="fa-stack fa-4x">
-          <a href="flyer/List of our courses.jpg">
-            <img class="img-fluid" src="flyer/List of our courses.jpg" alt="">
+          <a href="flyer/course list.png">
+            <img class="img-fluid" src="flyer/course list.png" alt="">
           </a>
         </span>
         <p class="text-muted" style="margin-top: 30px;">
-          <a href="flyer/List of our courses.jpg"> Click here </a>for the
+          <a href="flyer/course list.png"> Click here </a>for the
           list of our courses
         </p>
       </div>
