abayneh profile update

--- a/index.html
+++ b/index.html
@@ -1017,22 +1017,35 @@
             <h4>Abayneh Haile</h4>
             <p class="text-muted">Director</p>
             <p class="text-muted">
-              I am the owner and director of Bridge Professional Development
-              Centre. I am passionate about education. Here are some of the
-              milestones of my career, in Ethiopia and abroad. I have worked
-              in the education sector for 20 years in different capacities,
-              notably for the British Council as Facilitator, Programme
-              Manager and Consultant. I have also worked for the UK based
-              consultancy Transform ELT and Teach For Ethiopia as a
-              consultant. I have delivered intensive training programs in many
-              countries in Africa and beyond. I have an MA from Leeds
-              University, UK in Teacher Education. I am also UK CELTA
-              qualified to teach English to adults, a widely recognised and
-              respected base qualification. I am very active in my own
-              personal professional development and I am engaged with
-              supporting others in the profession wherever I can. I am serving
-              as President of the Ethiopian English Language Professionals’
-              Association. In short, I love teaching as well as learning!
+              I am the founder and director of Bridge Professional
+              Development Centre. I am passionate about learning and
+              development. I have MA in Education from University of
+              Leeds. I have practical experience in training, coaching, and
+              consulting not only in Ethiopia but in various countries. I
+              have a lot of experience delivering short term training in
+              more than ten countries in sub-Saharan Africa. At Bridge, I
+              get the opportunity to encourage, empower and impact a
+              variety of professionals from different walks of life in the
+              area of soft skills.<br /><br />
+              I have worked for British Council for more than a decade as
+              Programme Manger, Consultant, Regional Master Trainer
+              and Technical Lead for education programmes. I have also
+              done short term consultancy work for Transform ELT, Malala
+              Fund, GIZ, GoInnovation, Teach For Ethiopia, and Cambridge
+              Education.<br /><br />
+              I have delivered short term training and training of trainers
+              not only in Ethiopia but also in Nigeria, Senegal, Djibouti,
+              South Africa, Cameroon, Zambia, Tunisia, Cote D’Ivoire,
+              Guinea and Bangladesh. I have practical experience of
+              facilitating a range of workshops and I have a lot of
+              experience presenting and chairing at local and
+              international conferences.<br /><br />
+              I also validated and coached trainers in my capacity as
+              Master Trainer for British Council Connecting Classrooms
+              project which focuses on school leadership. My purpose in
+              life is to help people unpack their potential that is why I
+              enjoy teaching, training and coaching. I am passionate
+              about learning and development!
             </p>
           </div>
         </div>
