--- a/index.html
+++ b/index.html
@@ -204,26 +204,26 @@
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="blog.html#blog">Blog</a>
+            <a class="nav-link js-scroll-trigger" href="/blog.html#blog">Blog</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="gallery.html">Gallery</a>
+            <a class="nav-link js-scroll-trigger" href="/gallery.html">Gallery</a>
           </li>
           <li class="nav-item drop-down">
             <div class="row">
-              <a class="dropbtn nav-link js-scroll-trigger ml-3" href="about.html">About</a>
+              <a class="dropbtn nav-link js-scroll-trigger ml-3" href="/about.html">About</a>
               <div class="drop-down-btn align-self-center">
                 <i class="fa fa-caret-down drop-icon" id="di2" onclick="dropFunction2()"></i>
                 <div class="drop-down-content drop-down-shrink" id="dc2">
-                  <a class="js-scroll-trigger" href="about.html#about">About Us</a>
-                  <a class="js-scroll-trigger" href="about.html#team">Our Team</a>
+                  <a class="js-scroll-trigger" href="/about.html#about">About Us</a>
+                  <a class="js-scroll-trigger" href="/about.html#team">Our Team</a>
                 </div>
               </div>
             </div>
 
             <div class="drop-down-content drop-down-shrink display-drop">
-              <a class="js-scroll-trigger" href="about.html#about">About Us</a>
-              <a class="js-scroll-trigger" href="about.html#team">Our Team</a>
+              <a class="js-scroll-trigger" href="/about.html#about">About Us</a>
+              <a class="js-scroll-trigger" href="/about.html#team">Our Team</a>
             </div>
           </li>
           <li class="nav-item">
