course list and schedule update

--- a/index.html
+++ b/index.html
@@ -494,14 +494,15 @@
           Our Public Courses Schedule
         </h4>
         <span class="fa-stack fa-4x">
-          <a href="flyer/Public course schedule till June 2023.pdf">
+          <!-- <a href="#">
             <img class="img-fluid" src="flyer/Public courses from March to June 2023.png" alt="Brochure" />
-          </a>
+          </a> -->
+          <img class="img-fluid" src="flyer/Public courses from March to June 2023.png" alt="Brochure" />
         </span>
         <p class="text-muted" style="margin-top: 30px;">
-          <!-- Coming soon -->
-          <a href="flyer/Public course schedule till June 2023.pdf">
-            Click here </a>for our Our Public Courses Schedule
+          Coming soon
+          <!-- <a href="flyer/Public course schedule till June 2023.pdf"> -->
+          <!-- Click here </a>for our Our Public Courses Schedule -->
         </p>
         <!-- <h4 class="service-heading">Special Programs for Exam Preparation</h4>
             <p class="text-muted">
@@ -522,12 +523,12 @@
           List of courses
         </h4>
         <span class="fa-stack fa-4x">
-          <a href="flyer/course list.png">
+          <a href="flyer/course list.pdf">
             <img class="img-fluid" src="flyer/course list.png" alt="">
           </a>
         </span>
         <p class="text-muted" style="margin-top: 30px;">
-          <a href="flyer/course list.png"> Click here </a>for the
+          <a href="flyer/course list.pdf"> Click here </a>for the
           list of our courses
         </p>
       </div>
@@ -544,7 +545,7 @@
           </a>
         </span>
         <p class="text-muted" style="margin-top: 30px;">
-          Coming soon
+          <!-- Coming soon -->
           <a href="flyer/FAQs Final Nov 2022.pdf"> Click here </a>for
           frequently asked questions
         </p>
