--- a/index.html
+++ b/index.html
@@ -303,6 +303,7 @@
         <li data-target="#carouselExampleIndicators"></li>
         <li data-target="#carouselExampleIndicators"></li>
         <li data-target="#carouselExampleIndicators"></li>
+        <li data-target="#carouselExampleIndicators"></li>
       </ol>
       <div class="carousel-inner" style="
             background-color: #dce1e6a1;
@@ -422,19 +423,19 @@
           <h3>Programmes</h3>
           <p>
             <strong> 1. Training </strong>
-            We offer business and communication soft skills training in a variety of formats
-            – intensive and bitesize, open public access and in-company. Some of our popular
-            courses at Bridge PDC include – Business Communication Skills, Leadership, Customer Service,
-            Team Building and Intercultural Skills. We have an amazing training facility in Gurd Sholla,
-            Addis Ababa where we deliver training face-to-face. All our training programmes can be delivered virtually
-            via zoom.
-            Bridge works with people from all sectors including the public sector, voluntary sector, corporate sector
-            and private sector. <br />
+            We offer business and communication soft skills training in a variety of formats –
+            intensive and bitesize, open public access and in-company. We also facilitate retreats. We
+            call them awaydays. Some of our popular courses at Bridge include – Communication
+            Skills, Leadership, Customer Service, Team Building, Administration and Intercultural
+            Skills. We have an amazing training facility in Gurd Sholla, Addis Ababa where we deliver
+            training face-to-face. All our training programmes can also be delivered virtually via
+            zoom. Bridge works with people from all sectors including international and local NGOs,
+            the corporate sector and private sector. <br />
 
-            <strong> 2. Professional Learning Communities </strong>
+            <!-- <strong> 2. Professional Learning Communities </strong>
             At Bridge we create the space for like-minded professionals to get together and discuss
             professional issues. For example, a group of school leaders from various private schools
-            in Addis have monthly meetings at Bridge. Call us to find out more!
+            in Addis have monthly meetings at Bridge. Call us to find out more! -->
           </p>
 
           <h5 style="margin-left: 50%">3</h5>
@@ -442,31 +443,55 @@
 
         <div class="carousel-item">
           <p>
-            <strong> 3. Consulting </strong>
-            We offer a range of consulting services for various sectors in the area of learning and development.
-            We have experienced consultants who are based in Addis and overseas. <br />
-
-            <strong> 4. Coaching </strong>
-            We also offer a certified coaching service for individuals who would like to develop professionally and
-            improve performance with guidance and support. Our coaching provides committed expertise, bringing
-            insight,
-            perspective, and a growth mind-set to the coaching relationship. <br />
-
-            <strong> 5. Reading Challenge for Kids </strong>
-            Bridge has been running a wonderfully successful "10-Books-in-10 Weeks" series in July and August for the
-            past three years.
-            We give children appropriate age-related books to read at home and then they return to Bridge to do
-            various
-            activities
-            based around the stories they've read. The children develop a love of reading and story-telling and we
-            bring
-            the experience
-            alive in a caring, interactive monitored environment. <br />
-
-            Call us to find out more about our Reading Challenge Programme!
+            <strong> 2. Consulting </strong>
+            We offer a range of consulting services for various sectors in the area of learning and
+            development.
+            One of the areas is performance management for companies. Our service includes
+            introducing performance management through training but also making sure a
+            performance management system is in place.
+            The other area where we give consultancy service is how to build healthy organisational
+            culture. We have a tool that can help companies diagnose their culture. Then we can
+            offer training and follow up regarding how to build healthy organisational culture.
+            A complete school solutions is another package that we have for schools. This package
+            addresses two core support which includes:
+            Leadership and management: Helping school leaders lead the learning and teaching
+            rather than focusing only the administration work.
+            Learning and Teaching: Equipping teachers with 21st century skills which include
+            creativity, problem solving, critical thinking, collaboration and others.
+            Last but not the least, we offer consulting service for the hospitality sector. We have a
+            tool which diagnose the quality of the service. Then we can discuss the possible
+            interventions to make sure the company is customer centric.<br />
+            <strong> 3. Coaching </strong>
+            We also offer coaching service for individuals who would like to develop professionally
+            and improve performance with guidance and support. Our Director is a certified Life and
+            Leadership Coach. Our coaching provides committed expertise, bringing insight,
+            perspective, and a growth mind-set to the coaching relationship. We also provide group
+            coaching for companies after we deliver training. <br />
           </p>
 
           <h5 style="margin-left: 50%">4</h5>
+        </div>
+        <div class="carousel-item">
+          <p>
+            <strong> 4. Reading Champions </strong>
+            This is a programme for children. Bridge and our partner Reading For Life have been
+            running a variety of activities so that children read books for pleasure. We have a monthly
+            come-and-read-your-favourite-book event. We have also run a wonderfully successful
+            reading challenge programmes in July and August for the past three years. We give
+            children appropriate age-related books to read at home and then they return to Bridge to
+            do various activities based around the stories they've read. The children develop a love of
+            reading and story-telling and we bring the experience alive in a caring, interactive
+            monitored environment.
+            We have also been reading stories in English for children on Ethiopian Children’s TV for
+            the past few years. We have a variety of people reading stories in English so that children
+            develop love for reading. We consider this as our social responsibility. <br />
+
+            <strong> 5. Facilitating retreats </strong>
+            At Bridge, we facilitate retreats. We have facilitated retreats for all kinds of organisations.
+            We usually do it outside Addis Ababa. We call retreats awaydays because people are away
+            from their work.
+          </p>
+          <h5 style="margin-left: 50%">5</h5>
         </div>
       </div>
 
