active listening date update

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
     </div>
     <div class="row justify-content-center ms-auto">
       <div class="col-lg-3 col-10 mt-4">
-        <img src='flyer/active listening-web.png' alt='active listening' width="250">
+        <img src='flyer/active listening_web.png' alt='active listening' width="250">
       </div>
       <div class="col-lg-7 col-10 mt-4">
         <h2>Active listening skills - virtual training</h2>
