--- a/blog.html
+++ b/blog.html
@@ -25,7 +25,7 @@
 
     <style>
         .mainNav {
-            padding: 0px;
+            padding: .5rem 1rem;
             background-color: #212529;
         }
 
@@ -338,7 +338,7 @@
                 </p>
             </div>
 
-            <div class="row" style="margin-left: 5%">
+            <div class="row" style="margin-left: 4%; margin-right: 4%;">
                 <div class="col-lg-12">
                     <div class="row">
                         <div class="col-md-6">
@@ -353,11 +353,11 @@
                             <div class="form-group">
                                 <iframe
                                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3940.4815419415095!2d38.80917351478653!3d9.019760593527295!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x164b85ce7aa14399%3A0x4e3f73427725afd7!2sBridge%20School%20of%20languages!5e0!3m2!1sen!2set!4v1622093945371!5m2!1sen!2set"
-                                    width="600" height="450" style="border: 0" allowfullscreen=""
+                                    width="100%" height="450" style="border: 0" allowfullscreen=""
                                     loading="lazy"></iframe>
                                 <!-- <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3940.5003044918994!2d38.813807914786636!3d9.018041793528466!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x4e3f73427725afd7!2sBridge%20School%20of%20languages!5e0!3m2!1sen!2set!4v1619698055043!5m2!1sen!2set"
-              width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe> -->
+                      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3940.5003044918994!2d38.813807914786636!3d9.018041793528466!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x4e3f73427725afd7!2sBridge%20School%20of%20languages!5e0!3m2!1sen!2set!4v1619698055043!5m2!1sen!2set"
+                      width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe> -->
                             </div>
                         </div>
                         <div class="clearfix"></div>
