commented out old updates

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
   </header>
 
   <!-- updates -->
-  <section class="page-section" id="updates">
+  <!-- <section class="page-section" id="updates">
     <div class="row">
       <div class="col-lg-12 text-center">
         <h2 class="section-heading text-uppercase">Updates</h2>
@@ -284,7 +284,7 @@
       </div>
     </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- Services -->
   <section class="page-section" id="services">
