--- a/index.html
+++ b/index.html
@@ -519,15 +519,15 @@
           Our Public Courses Schedule
         </h4>
         <span class="fa-stack fa-4x">
-          <!-- <a href="#">
-            <img class="img-fluid" src="flyer/Public courses from March to June 2023.png" alt="Brochure" />
-          </a> -->
-          <img class="img-fluid" src="flyer/Public courses from March to June 2023.png" alt="Brochure" />
+          <a href="flyer/Public course schedule till June 2024.pdf">
+            <img class="img-fluid" src="flyer/Public courses from Jan  to June 2024.PNG" alt="Brochure" />
+          </a>
+          <!-- <img class="img-fluid" src="flyer/Public courses from Jan  to June 2024.PNG" alt="Brochure" /> -->
         </span>
         <p class="text-muted" style="margin-top: 30px;">
-          Coming soon
-          <!-- <a href="flyer/Public course schedule till June 2023.pdf"> -->
-          <!-- Click here </a>for our Our Public Courses Schedule -->
+          <!-- Coming soon -->
+          <a href="flyer/Public course schedule till June 2024.pdf">
+            Click here </a>for our Our Public Courses Schedule
         </p>
         <!-- <h4 class="service-heading">Special Programs for Exam Preparation</h4>
             <p class="text-muted">
