CS skills on update section

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
   </header>
 
   <!-- updates -->
-  <!-- <section class="page-section" id="updates">
+  <section class="page-section" id="updates">
     <div class="row">
       <div class="col-lg-12 text-center">
         <h2 class="section-heading text-uppercase">Updates</h2>
@@ -262,29 +262,29 @@
       </div>
     </div>
     <div class="row justify-content-center ms-auto">
-      <div class="col-lg-3 col-10 mt-4">
-        <img src='flyer/active listening_web.png' alt='active listening' width="250">
+      <div class="col-lg-3 col-10 mt-5">
+        <img src='flyer/customer service_web.png' alt='customer service' width="250">
       </div>
       <div class="col-lg-7 col-10 mt-4">
-        <h2>Active listening skills - virtual training</h2>
+        <h2>Customer Service Skills</h2>
 
-        <p>Communication skills are central to the success of every organisation. This course, through discussion
-          and
-          practical group exercise, will help you develop your active listening skills.
-          The course will cover:<br />
-        <ol>
-          <li>Why listening? Introduction to active listening.</li>
-          <li>The three V's of communication.</li>
-          <li> Active listening ingredients.</li>
-          <li>Barriers to active listening.</li>
-          <li>Role play</li>
-        </ol>
+        <p>Be effective, friendly and customer focused!</p>
+
+        <p> You know that all customer facing roles are demanding – especially when you are connecting using a different
+          language. We will show you how to turn a customer service disappointment into a positive experience and
+          respond to selling opportunities effectively.<br />
+
+          This 2-day workshop will help you adopt a consistent, professional style when speaking
+          with customers. You will develop skills to engage with customers and handle their
+          enquiries effectively. You will identify ways you can add value to customer relationships
+          and exceed expectations.<br />
+
         </p>
         <p>call <a href="#contact">now</a> to learn more</p>
       </div>
     </div>
     </div>
-  </section> -->
+  </section>
 
   <!-- Services -->
   <section class="page-section" id="services">
