--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
   </header>
 
   <!-- updates -->
-  <!-- <section class="page-section" id="updates">
+  <section class="page-section" id="updates">
     <div class="row">
       <div class="col-lg-12 text-center">
         <h2 class="section-heading text-uppercase">Updates</h2>
@@ -263,28 +263,31 @@
     </div>
     <div class="row justify-content-center ms-auto">
       <div class="col-lg-3 col-10 mt-5">
-        <img src='flyer/customer service_web.png' alt='customer service' width="250">
+        <img src='flyer/team working_web.png' alt='team working' width="250">
       </div>
       <div class="col-lg-7 col-10 mt-4">
-        <h2>Customer Service Skills</h2>
+        <h2>Team Working Skills</h2>
 
-        <p>Be effective, friendly and customer focused!</p>
+        <p>Working at your best with others</p>
 
-        <p> You know that all customer facing roles are demanding – especially when you are connecting using a different
-          language. We will show you how to turn a customer service disappointment into a positive experience and
-          respond to selling opportunities effectively.<br />
+        <p> Teamwork is difficult. As our work environment in the knowledge economy becomes even more complex, so too
+          will teamwork. However, if we focus on what connection looks like at every level in teams and the wider
+          organisation, we can begin to address the challenges of trust, proximity, best work conditions,
+          self-awareness, and purpose in teams.<br />
 
-          This 2-day workshop will help you adopt a consistent, professional style when speaking
-          with customers. You will develop skills to engage with customers and handle their
-          enquiries effectively. You will identify ways you can add value to customer relationships
-          and exceed expectations.<br />
+          It starts with acknowledging the importance of the individual and how you feel connected to others at
+          work.<br />
+
+          Join this 1-day workshop to understand how you can best fit into the teams you work with. See how you can best
+          deal with conflict when it arises. You’ll also learn transferable techniques for giving and receiving feedback
+          to really build those relationships that matter to you.<br />
 
         </p>
         <p>call <a href="#contact">now</a> to learn more</p>
       </div>
     </div>
     </div>
-  </section> -->
+  </section>
 
   <!-- Services -->
   <section class="page-section" id="services">
