--- a/index.html
+++ b/index.html
@@ -522,15 +522,15 @@
           Our Public Courses Schedule
         </h4>
         <span class="fa-stack fa-4x">
-          <a href="flyer/Public course schedule till June 2024.pdf">
-            <img class="img-fluid" src="flyer/Public courses from Jan  to June 2024.PNG" alt="Brochure" />
-          </a>
+          <!-- <a href="flyer/Public course schedule till June 2024.pdf"> -->
+          <img class="img-fluid" src="flyer/Public courses from Jan  to June 2024.PNG" alt="Brochure" />
+          <!-- </a> -->
           <!-- <img class="img-fluid" src="flyer/Public courses from Jan  to June 2024.PNG" alt="Brochure" /> -->
         </span>
         <p class="text-muted" style="margin-top: 30px;">
-          <!-- Coming soon -->
-          <a href="flyer/Public course schedule till June 2024.pdf">
-            Click here </a>for our Our Public Courses Schedule
+          Coming soon
+          <!-- <a href="flyer/Public course schedule till June 2024.pdf">
+            Click here </a>for our Our Public Courses Schedule -->
         </p>
         <!-- <h4 class="service-heading">Special Programs for Exam Preparation</h4>
             <p class="text-muted">
