Public course update

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
   </header>
 
   <!-- updates -->
-  <!-- <section class="page-section" id="updates">
+  <section class="page-section" id="updates">
     <div class="row">
       <div class="col-lg-12 text-center">
         <h2 class="section-heading text-uppercase">Updates</h2>
@@ -261,33 +261,35 @@
         </h3>
       </div>
     </div>
-    <div class="row justify-content-center ms-auto">
-      <div class="col-lg-3 col-10 mt-5">
-        <img src='flyer/team working_web.png' alt='team working' width="250">
+    <div class="row ms-auto">
+      <!-- <div class="col-lg-3 col-10 mt-5"> -->
+      <div class="col-lg-6 col-md-10">
+        <img src='flyer/ps_web3.jpg' alt='public speaking' width="100%">
       </div>
-      <div class="col-lg-7 col-10 mt-4">
-        <h2>Team Working Skills</h2>
+      <div class="col-lg-5 col-md-10 mt-4 ml-5">
+        <!-- <h2>Public Speaking Skills for Teenagers</h2>
 
-        <p>Working at your best with others</p>
+        <p>Unlock your voice, Speak with confidence</p> -->
 
-        <p> Teamwork is difficult. As our work environment in the knowledge economy becomes even more complex, so too
-          will teamwork. However, if we focus on what connection looks like at every level in teams and the wider
-          organisation, we can begin to address the challenges of trust, proximity, best work conditions,
-          self-awareness, and purpose in teams.<br />
-
-          It starts with acknowledging the importance of the individual and how you feel connected to others at
-          work.<br />
-
-          Join this 1-day workshop to understand how you can best fit into the teams you work with. See how you can best
-          deal with conflict when it arises. You’ll also learn transferable techniques for giving and receiving feedback
-          to really build those relationships that matter to you.<br />
-
+        <p> Is your teenager looking to become a confident and persuasive speaker? Give them the gift of our public
+          speaking training! Our program is designed to help teenagers overcome their fears, build their confidence, and
+          develop effective communication skills that will benefit them for life.
+          <br />
+          <strong> Why choose us:</strong><br />
         </p>
+        <ul style="list-style-type:disc;">
+          <li>Experienced instructors who are passionate about empowering young speakers</li>
+          <li>Interactive and engaging sessions that cater to teenagers' unique learning styles</li>
+          <li>Small class sizes for personalized attention and feedback</li>
+          <li>Fun and supportive environment to help teenagers thrive</li>
+        </ul>
+
+
         <p>call <a href="#contact">now</a> to learn more</p>
       </div>
     </div>
     </div>
-  </section> -->
+  </section>
 
   <!-- Services -->
   <section class="page-section" id="services">
