removed past update

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
   </header>
 
   <!-- updates -->
-  <section class="page-section" id="updates">
+  <!-- <section class="page-section" id="updates">
     <div class="row">
       <div class="col-lg-12 text-center">
         <h2 class="section-heading text-uppercase">Updates</h2>
@@ -262,14 +262,13 @@
       </div>
     </div>
     <div class="row ms-auto">
-      <!-- <div class="col-lg-3 col-10 mt-5"> -->
       <div class="col-lg-6 col-md-10">
         <img src='flyer/ps_web3.jpg' alt='public speaking' width="100%">
       </div>
       <div class="col-lg-5 col-md-10 mt-4 ml-5">
-        <!-- <h2>Public Speaking Skills for Teenagers</h2>
+        <h2>Public Speaking Skills for Teenagers</h2>
 
-        <p>Unlock your voice, Speak with confidence</p> -->
+        <p>Unlock your voice, Speak with confidence</p>
 
         <p> Is your teenager looking to become a confident and persuasive speaker? Give them the gift of our public
           speaking training! Our program is designed to help teenagers overcome their fears, build their confidence, and
@@ -289,7 +288,7 @@
       </div>
     </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- Services -->
   <section class="page-section" id="services">
