course list update

--- a/index.html
+++ b/index.html
@@ -552,12 +552,12 @@
           List of courses
         </h4>
         <span class="fa-stack fa-4x">
-          <a href="flyer/course list.pdf">
-            <img class="img-fluid" src="flyer/course list.png" alt="">
+          <a href="flyer/course_list.pdf">
+            <img class="img-fluid" src="flyer/course_list.png" alt="">
           </a>
         </span>
         <p class="text-muted" style="margin-top: 30px;">
-          <a href="flyer/course list.pdf"> Click here </a>for the
+          <a href="flyer/course_list.pdf"> Click here </a>for the
           list of our courses
         </p>
       </div>
