public course update

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
   </header>
 
   <!-- updates -->
-  <!-- <section class="page-section" id="updates">
+  <section class="page-section" id="updates">
     <div class="row">
       <div class="col-lg-12 text-center">
         <h2 class="section-heading text-uppercase">Updates</h2>
@@ -262,33 +262,31 @@
       </div>
     </div>
     <div class="row ms-auto">
-      <div class="col-lg-6 col-md-10">
-        <img src='flyer/ps_web3.jpg' alt='public speaking' width="100%">
+      <div class="col-lg-4 col-md-10 ml-5">
+        <img src='flyer/al_web.png' alt='public speaking' width="400px">
       </div>
-      <div class="col-lg-5 col-md-10 mt-4 ml-5">
-        <h2>Public Speaking Skills for Teenagers</h2>
+      <div class="col-lg-7 col-md-10 mt-4 ">
+        <h2>Active listening skills</h2>
 
-        <p>Unlock your voice, Speak with confidence</p>
-
-        <p> Is your teenager looking to become a confident and persuasive speaker? Give them the gift of our public
-          speaking training! Our program is designed to help teenagers overcome their fears, build their confidence, and
-          develop effective communication skills that will benefit them for life.
+        <p> Communication skills are central to the success of every organisation. This course, through discussion and
+          practical group exercise, will help you develop your active listening skills.
           <br />
-          <strong> Why choose us:</strong><br />
+          <strong> The course will cover:</strong><br />
         </p>
         <ul style="list-style-type:disc;">
-          <li>Experienced instructors who are passionate about empowering young speakers</li>
-          <li>Interactive and engaging sessions that cater to teenagers' unique learning styles</li>
-          <li>Small class sizes for personalized attention and feedback</li>
-          <li>Fun and supportive environment to help teenagers thrive</li>
+          <li>Why listening? Introduction to active listening.</li>
+          <li>The three V's of communication.</li>
+          <li>Active listening ingredients.</li>
+          <li>Barriers to active listening.</li>
+          <li>Role play</li>
         </ul>
-
-
+        <p>We look forward to seeing you at the Active Listening Training Workshop and witnessing the positive impact it
+          will have on your communication skills.</p>
         <p>call <a href="#contact">now</a> to learn more</p>
       </div>
     </div>
     </div>
-  </section> -->
+  </section>
 
   <!-- Services -->
   <section class="page-section" id="services">
