--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
   </header>
 
   <!-- updates -->
-  <!-- <section class="page-section" id="updates">
+  <section class="page-section" id="updates">
     <div class="row">
       <div class="col-lg-12 text-center">
         <h2 class="section-heading text-uppercase">Updates</h2>
@@ -263,30 +263,29 @@
     </div>
     <div class="row ms-auto">
       <div class="col-lg-4 col-md-10 ml-5">
-        <img src='flyer/al_web.png' alt='public speaking' width="400px">
+        <img src='flyer/ps_web.png' alt='presentation' width="400px">
       </div>
       <div class="col-lg-7 col-md-10 mt-4 ">
-        <h2>Active listening skills</h2>
+        <h2>Presentation Skills</h2>
 
-        <p> Communication skills are central to the success of every organisation. This course, through discussion and
-          practical group exercise, will help you develop your active listening skills.
+        <p> We all want to deliver presentations with impact and clarity. We can do this by ensuring the focus is 100% on the key business questions and by structuring the presentation around this.
+          Well constructed and delivered presentations give us a strong platform for richer internal discussions by highlighting key discussion points and providing clear supporting information.
           <br />
-          <strong> The course will cover:</strong><br />
+          <strong> Some key components of the course include::</strong><br />
         </p>
         <ul style="list-style-type:disc;">
-          <li>Why listening? Introduction to active listening.</li>
-          <li>The three V's of communication.</li>
-          <li>Active listening ingredients.</li>
-          <li>Barriers to active listening.</li>
-          <li>Role play</li>
+          <li>Learn how to design presentations around audience outcomes</li>
+          <li>Understand how to structure a presentation to engage the audience</li>
+          <li>Receive feedback on your individual style, body language and impact </li>
+          <li>Learn how to deal with nervousness</li>
         </ul>
-        <p>We look forward to seeing you at the Active Listening Training Workshop and witnessing the positive impact it
-          will have on your communication skills.</p>
+        <p>We look forward to seeing you at the Presentation Skills Training and witnessing the positive impact it
+          will have on your life.</p>
         <p>call <a href="#contact">now</a> to learn more</p>
       </div>
     </div>
     </div>
-  </section> -->
+  </section>
 
   <!-- Services -->
   <section class="page-section" id="services">
