added new client logos

--- a/index.html
+++ b/index.html
@@ -1057,6 +1057,12 @@
                 <img src="img/clients/amcham.png" class="img-fluid client_item" />
               </li>
               <li>
+                <img src="img/clients/CST.png" class="img-fluid client_item" />
+              </li>
+              <li>
+                <img src="img/clients/Gain.png" class="img-fluid client_item" />
+              </li>
+              <li>
                 <img src="img/clients/save the children.png" class="img-fluid client_item" />
               </li>
               <li>
