formatting changes to intro heading

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
         <div class="intro-lead-in">
           <h1>Welcome To Bridge Professional Development Centre</h1>
         </div>
-        <div class="intro-heading text-uppercase">
+        <div class="intro-heading text-uppercase"><br/>
           Train  &nbsp; Coach  &nbsp; Empower!
         </div>
 
